secondfile/objects/Custom_Product__c.object
<CustomObject>
    <fields>
        <fullName>ATT_Customer_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AT&amp;T Customer Site</label>
        <referenceTo>CustomerSite__c</referenceTo>
        <relationshipLabel>Custom Products</relationshipLabel>
        <relationshipName>Custom_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Access_Speed__c</fullName>
        <label>Access Speed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>2*T1</fullName>
                </value>
                <value>
                    <fullName>3*T1</fullName>
                </value>
                <value>
                    <fullName>4*T1</fullName>
                </value>
                <value>
                    <fullName>5*T1</fullName>
                </value>
                <value>
                    <fullName>6*T1</fullName>
                </value>
                <value>
                    <fullName>7*T1</fullName>
                </value>
                <value>
                    <fullName>8*T1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>Private Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Quote__c</fullName>
        <label>Custom Quote</label>
        <referenceTo>Custom_Quote__c</referenceTo>
        <relationshipLabel>Custom Products</relationshipLabel>
        <relationshipName>Custom_Products1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Port_Spee__c</fullName>
        <label>Port Speed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>2*T1</fullName>
                </value>
                <value>
                    <fullName>3*T1</fullName>
                </value>
                <value>
                    <fullName>4*T1</fullName>
                </value>
                <value>
                    <fullName>5*T1</fullName>
                </value>
                <value>
                    <fullName>6*T1</fullName>
                </value>
                <value>
                    <fullName>7*T1</fullName>
                </value>
                <value>
                    <fullName>8*T1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Discount__c</fullName>
        <label>Product Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum Elite</fullName>
                </value>
                <value>
                    <fullName>Platinum Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Product_Price__c</fullName>
        <formula>ROUND( Price__c - Price__c *  Product_Discount__c ,2 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Custom Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Custom Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>